x86/include/TestEngine.h


TESTENGINE_API(int32) bccmdEnableDeviceConnect(uint32 handle);
TESTENGINE_API(int32) bccmdEnableDeviceUnderTestMode(uint32 handle);
TESTENGINE_API(int32) bccmdCheckSqifImageValidationStatus(uint32 handle,
                                                          uint16* status,
                                                          uint16 timeout);
TESTENGINE_API(int32) radiotestStereoCodecLB(uint32 handle, uint16 sampleRate,
                                             uint16 reroute);
TESTENGINE_API(int32) radiotestTxstart(uint32 handle, uint16 frequency, uint16 power1,
                                       uint16 power2, int16 modulation);
TESTENGINE_API(int32) radiotestTxdata1(uint32 handle, uint16 frequency, uint16 power1,
                                       uint16 power2);
TESTENGINE_API(int32) radiotestTxdata2(uint32 handle, uint16 countryCode,
                                       uint16 power1, uint16 power2);
TESTENGINE_API(int32) radiotestTxdata3(uint32 handle, uint16 frequency, uint16 power1,
                                       uint16 power2);
TESTENGINE_API(int32) radiotestTxdata4(uint32 handle, uint16 frequency, uint16 power1,
                                       uint16 power2);
TESTENGINE_API(int32) radiotestCfgTxPower(uint32 handle, int16 power);
TESTENGINE_API(int32) radiotestRxstart1(uint32 handle, uint16 frequency, uint8 hiSide,
                                        uint16 rxAttenuation);
TESTENGINE_API(int32) radiotestRxstart2(uint32 handle, uint16 frequency, uint8 hiSide,
                                        uint16 rxAttenuation, uint16 sampleSize);
TESTENGINE_API(int32) hqGetRssi(uint32 handle, int32 timeout, uint16 maxSize,
                                uint16 rssiSamples[]);
TESTENGINE_API(int32) radiotestBer1(uint32 handle, uint16 frequency, uint8 hiSide,
                                    uint16 rxAttenuation, uint32 sampleSize);
TESTENGINE_API(int32) radiotestBer2(uint32 handle, uint16 countryCode, uint8 hiSide,
                                    uint16 rxAttenuation, uint32 sampleSize);
TESTENGINE_API(int32) radiotestBerLoopback(uint32 handle, uint16 frequency,
                                           uint16 power1, uint16 power2,
                                           uint32 sampleSize);
TESTENGINE_API(int32) radiotestRxLoopback(uint32 handle, uint16 frequency,
                                          uint16 intPA, uint16 extPA);
TESTENGINE_API(int32) radiotestLoopback(uint32 handle, uint16 frequency, uint16 power1,
                                        uint16 power2);
TESTENGINE_API(int32) hqGetBer(uint32 handle, int32 timeout, uint32 berReport[]);
TESTENGINE_API(int32) radiotestRxdata1(uint32 handle, uint16 frequency, uint8 hiSide,
                                       uint16 rxAttenuation);
TESTENGINE_API(int32) radiotestRxdata2(uint32 handle, uint16 countryCode,
                                       uint8 hiSide, uint16 rxAttenuation);
TESTENGINE_API(int32) hqGetRxdata(uint32 handle, int32 timeout, uint16 rxData[]);
TESTENGINE_API(int32) radiotestCfgFreq(uint32 handle, uint16 txRxInterval,
                                       uint16 loopback, uint16 report);
TESTENGINE_API(int32) radiotestCfgFreqMs(uint32 handle, uint16 txRxInterval,
                                         uint16 loopback, uint16 report);
TESTENGINE_API(int32) radiotestCfgPkt(uint32 handle, uint16 type, uint16 size);
TESTENGINE_API(int32) radiotestCfgBitError(uint32 handle, uint32 sampleSize,
                                           uint8 reset);
TESTENGINE_API(int32) radiotestCfgTxPaAtten(uint32 handle, uint16 atten);
TESTENGINE_API(int32) radiotestCfgXtalFtrim(uint32 handle, uint16 fTrim);
TESTENGINE_API(int32) radiotestCalcXtalOffset(float64 nominalFreqMhz,
                                              float64 actualFreqMhz, int16* offset);
TESTENGINE_API(int32) radiotestCfgUapLap(uint32 handle, uint16 uap, uint32 lap);
TESTENGINE_API(int32) radiotestCfgIqTrim(uint32 handle, uint16 trim);
TESTENGINE_API(int32) radiotestCfgTxIf(uint32 handle, int16 offset);
TESTENGINE_API(int32) radiotestCfgTxTrim(uint32 handle, uint16 amAddr);
TESTENGINE_API(int32) radiotestCfgLoLvl(uint32 handle, uint16 loLvl);
TESTENGINE_API(int32) radiotestCfgHoppingSeq(uint32 handle, uint16 channels[]);
TESTENGINE_API(int32) radiotestSettle(uint32 handle, uint16 start, uint16 end);
TESTENGINE_API(int32) hqGetSettle(uint32 handle, uint16 results[]);
TESTENGINE_API(int32) get_freq_offset(uint32 handle, float64* offset,
                                      int32 sampleSize);
TESTENGINE_API(int32) bccmdSetEeprom(uint32 handle, uint16 log2bytes, uint16 addrMask);
TESTENGINE_API(int32) psReadBdAddr(uint32 handle, uint32* lap, uint8* uap,
                                   uint16* nap);
TESTENGINE_API(int32) psRead(uint32 handle, uint16 psKey, uint16 store,
                             uint16 arrayLen, uint16 data[], uint16* keyLen);
TESTENGINE_API(int32) psClear(uint32 handle, uint16 psKey, uint16 store);
TESTENGINE_API(int32) psClearAll(uint32 handle, uint16 store);
TESTENGINE_API(int32) psFactorySet(uint32 handle);
TESTENGINE_API(int32) psFactoryRestoreAll(uint32 handle);
TESTENGINE_API(int32) psFactoryRestore(uint32 handle);
TESTENGINE_API(int32) psSize(uint32 handle, uint16 psKey, uint16 store, uint16* size);
TESTENGINE_API(int32) psWrite(uint32 handle, uint16 psKey, uint16 store,
                              uint16 length, const uint16 data[]);
TESTENGINE_API(int32) psWriteVerify(uint32 handle, uint16 psKey, uint16 store,
                                    uint16 length, const uint16 data[]);