x86/include/TestEngineAPI.cs


        [DllImport("TestEngine.dll", EntryPoint="bccmdEnableDeviceConnect",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdEnableDeviceConnect(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="bccmdEnableDeviceUnderTestMode",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdEnableDeviceUnderTestMode(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="bccmdCheckSqifImageValidationStatus",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdCheckSqifImageValidationStatus(uint handle, out ushort status, ushort timeout);

        [DllImport("TestEngine.dll", EntryPoint="radiotestStereoCodecLB",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestStereoCodecLB(uint handle, ushort sampleRate, ushort reroute);

        [DllImport("TestEngine.dll", EntryPoint="radiotestTxstart",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestTxstart(uint handle, ushort frequency, ushort power1, ushort power2, short modulation);

        [DllImport("TestEngine.dll", EntryPoint="radiotestTxdata1",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestTxdata1(uint handle, ushort frequency, ushort power1, ushort power2);

        [DllImport("TestEngine.dll", EntryPoint="radiotestTxdata2",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestTxdata2(uint handle, ushort countryCode, ushort power1, ushort power2);

        [DllImport("TestEngine.dll", EntryPoint="radiotestTxdata3",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestTxdata3(uint handle, ushort frequency, ushort power1, ushort power2);

        [DllImport("TestEngine.dll", EntryPoint="radiotestTxdata4",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestTxdata4(uint handle, ushort frequency, ushort power1, ushort power2);

        [DllImport("TestEngine.dll", EntryPoint="radiotestCfgTxPower",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestCfgTxPower(uint handle, short power);

        [DllImport("TestEngine.dll", EntryPoint="radiotestRxstart1",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestRxstart1(uint handle, ushort frequency, byte hiSide, ushort rxAttenuation);

        [DllImport("TestEngine.dll", EntryPoint="radiotestRxstart2",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestRxstart2(uint handle, ushort frequency, byte hiSide, ushort rxAttenuation, ushort sampleSize);

        [DllImport("TestEngine.dll", EntryPoint="hqGetRssi",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hqGetRssi(uint handle, int timeout, ushort maxSize, ushort [] rssiSamples);

        [DllImport("TestEngine.dll", EntryPoint="radiotestBer1",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestBer1(uint handle, ushort frequency, byte hiSide, ushort rxAttenuation, uint sampleSize);

        [DllImport("TestEngine.dll", EntryPoint="radiotestBer2",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestBer2(uint handle, ushort countryCode, byte hiSide, ushort rxAttenuation, uint sampleSize);

        [DllImport("TestEngine.dll", EntryPoint="radiotestBerLoopback",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestBerLoopback(uint handle, ushort frequency, ushort power1, ushort power2, uint sampleSize);

        [DllImport("TestEngine.dll", EntryPoint="radiotestRxLoopback",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestRxLoopback(uint handle, ushort frequency, ushort intPA, ushort extPA);

        [DllImport("TestEngine.dll", EntryPoint="radiotestLoopback",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestLoopback(uint handle, ushort frequency, ushort power1, ushort power2);

        [DllImport("TestEngine.dll", EntryPoint="hqGetBer",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hqGetBer(uint handle, int timeout, uint [] berReport);

        [DllImport("TestEngine.dll", EntryPoint="radiotestRxdata1",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestRxdata1(uint handle, ushort frequency, byte hiSide, ushort rxAttenuation);

        [DllImport("TestEngine.dll", EntryPoint="radiotestRxdata2",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestRxdata2(uint handle, ushort countryCode, byte hiSide, ushort rxAttenuation);

        [DllImport("TestEngine.dll", EntryPoint="hqGetRxdata",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hqGetRxdata(uint handle, int timeout, ushort [] rxData);

        [DllImport("TestEngine.dll", EntryPoint="radiotestCfgFreq",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestCfgFreq(uint handle, ushort txRxInterval, ushort loopback, ushort report);

        [DllImport("TestEngine.dll", EntryPoint="radiotestCfgFreqMs",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestCfgFreqMs(uint handle, ushort txRxInterval, ushort loopback, ushort report);

        [DllImport("TestEngine.dll", EntryPoint="radiotestCfgPkt",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestCfgPkt(uint handle, ushort aType, ushort size);

        [DllImport("TestEngine.dll", EntryPoint="radiotestCfgBitError",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestCfgBitError(uint handle, uint sampleSize, byte reset);

        [DllImport("TestEngine.dll", EntryPoint="radiotestCfgTxPaAtten",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestCfgTxPaAtten(uint handle, ushort atten);

        [DllImport("TestEngine.dll", EntryPoint="radiotestCfgXtalFtrim",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestCfgXtalFtrim(uint handle, ushort fTrim);

        [DllImport("TestEngine.dll", EntryPoint="radiotestCalcXtalOffset",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestCalcXtalOffset(double nominalFreqMhz, double actualFreqMhz, out short offset);

        [DllImport("TestEngine.dll", EntryPoint="radiotestCfgUapLap",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestCfgUapLap(uint handle, ushort uap, uint lap);

        [DllImport("TestEngine.dll", EntryPoint="radiotestCfgIqTrim",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestCfgIqTrim(uint handle, ushort trim);

        [DllImport("TestEngine.dll", EntryPoint="radiotestCfgTxIf",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestCfgTxIf(uint handle, short offset);

        [DllImport("TestEngine.dll", EntryPoint="radiotestCfgTxTrim",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestCfgTxTrim(uint handle, ushort amAddr);

        [DllImport("TestEngine.dll", EntryPoint="radiotestCfgLoLvl",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestCfgLoLvl(uint handle, ushort loLvl);

        [DllImport("TestEngine.dll", EntryPoint="radiotestCfgHoppingSeq",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestCfgHoppingSeq(uint handle, ushort [] channels);

        [DllImport("TestEngine.dll", EntryPoint="radiotestSettle",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestSettle(uint handle, ushort start, ushort aEnd);

        [DllImport("TestEngine.dll", EntryPoint="hqGetSettle",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hqGetSettle(uint handle, ushort [] results);

        [DllImport("TestEngine.dll", EntryPoint="get_freq_offset",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int get_freq_offset(uint handle, out double offset, int sampleSize);

        [DllImport("TestEngine.dll", EntryPoint="bccmdSetEeprom",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdSetEeprom(uint handle, ushort log2bytes, ushort addrMask);

        [DllImport("TestEngine.dll", EntryPoint="psReadBdAddr",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psReadBdAddr(uint handle, out uint lap, out byte uap, out ushort nap);

        [DllImport("TestEngine.dll", EntryPoint="psRead",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psRead(uint handle, ushort psKey, ushort store, ushort arrayLen, ushort [] data, out ushort keyLen);

        [DllImport("TestEngine.dll", EntryPoint="psClear",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psClear(uint handle, ushort psKey, ushort store);

        [DllImport("TestEngine.dll", EntryPoint="psClearAll",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psClearAll(uint handle, ushort store);

        [DllImport("TestEngine.dll", EntryPoint="psFactorySet",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psFactorySet(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="psFactoryRestoreAll",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psFactoryRestoreAll(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="psFactoryRestore",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psFactoryRestore(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="psSize",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psSize(uint handle, ushort psKey, ushort store, out ushort size);

        [DllImport("TestEngine.dll", EntryPoint="psWrite",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psWrite(uint handle, ushort psKey, ushort store, ushort length, ushort [] data);

        [DllImport("TestEngine.dll", EntryPoint="psWriteVerify",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psWriteVerify(uint handle, ushort psKey, ushort store, ushort length, ushort [] data);
